--- a/style.css
+++ b/style.css
@@ -135,3 +135,30 @@ html, body
     background-position: 0 30%;
 }
 
+.right .black_circle
+{
+    width: fit-content;
+    background-color: rgb(36, 36, 36);
+    border-radius: 50%;
+    color: white;
+    font-weight: 500;
+    padding: 50px 20px;
+    position: absolute;
+    top: 32%;
+    right: -12.5%;
+
+}
+
+.right .rotted_text
+{
+    font-size: 30px;
+    font-weight: 500;
+    position: absolute;
+    left: -56px;
+    bottom: -11px;
+    rotate: -90deg;
+    transform-origin: 0 0;
+    
+}
+
+
