--- a/style.css
+++ b/style.css
@@ -1,30 +1,28 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html, body
-{
+html,
+body {
     width: 100%;
     height: 100%;
 }
 
-#main
-{
+#main {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 130px 120px 0px 80px;
     font-family: "Roboto", sans-serif;
-    
+
 
 }
 
-.left
-{
-    
+.left {
+
     width: 100%;
     height: 100%;
     /* background-color: blueviolet; */
@@ -33,19 +31,21 @@ html, body
     justify-content: space-between;
     line-height: 1;
 }
-.left > h1
-{
-    font-size: 110px;
+
+.left>h1 {
+    font-size: 8.2vw;
     font-weight: 400;
-    
+    line-height: 8.3vw;
+
+
 }
-.left_down
-{
-    
-   line-height: 1.5;
+
+.left_down {
+
+    line-height: 1.5;
 }
-.left_down > .colors
-{
+
+.left_down>.colors {
     width: fit-content;
     border: 1px solid black;
     border-radius: 50px;
@@ -53,50 +53,47 @@ html, body
     justify-content: space-between;
     padding: 5px 10px;
 }
-.left_down > .colors > p
-{
+
+.left_down>.colors>p {
     font-size: 16px;
     margin-right: 15px;
 }
-.left_down > .colors > i
-{
+
+.left_down>.colors>i {
     font-size: 16px;
 }
-.left_down > .colors .dots
-{
+
+.left_down>.colors .dots {
     display: inline;
     padding: 4px;
     background-color: black;
     border-radius: 50%;
 }
 
-.left_down > h3
-{
-    font-size: 20px;
+.left_down>h3 {
+    font-size: 2.14vw;
     margin-top: 45px;
     margin-bottom: 10px;
 }
 
-.left_down > p
-{
+.left_down>p {
     width: 50%;
     padding-bottom: 30px;
     color: rgb(61, 59, 59);
-    
+
 }
-.right
-{
-    
+
+.right {
+
     height: 90%;
     width: 80%;
     /* background-color: green; */
     position: relative;
     align-self: end;
-    
+
 }
 
-.right .right_top
-{
+.right .right_top {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -104,30 +101,26 @@ html, body
     height: 60px;
     padding-right: 20px;
 }
-.right .right_top > h3
-{
-    font-size: 20px;
-   
+
+.right .right_top>h3 {
+    font-size: 2.1vw;
+
 }
 
-.right .right_top > h5
-{
-    font-size: 16px;   
+.right .right_top>h5 {
+    font-size: 1.5vw;
 }
 
-.right .right_top > h5 > i
-{
+.right .right_top>h5>i {
     color: gold;
 
 }
 
-.right .right_top > h5 > i:nth-child(1)
-{
+.right .right_top>h5>i:nth-child(1) {
     padding-left: 6px;
 }
 
-.right .image
-{
+.right .image {
     width: 100%;
     height: 90.1%;
     background-image: url(https://images.unsplash.com/photo-1627067227573-07bc616f46ee?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
@@ -135,8 +128,7 @@ html, body
     background-position: 0 30%;
 }
 
-.right .black_circle
-{
+.right .black_circle {
     width: fit-content;
     background-color: rgb(36, 36, 36);
     border-radius: 50%;
@@ -149,16 +141,172 @@ html, body
 
 }
 
-.right .rotted_text
-{
-    font-size: 30px;
+.right .rotted_text {
+    font-size: 3.1vw;
     font-weight: 500;
     position: absolute;
     left: -56px;
     bottom: -11px;
     rotate: -90deg;
     transform-origin: 0 0;
-    
+
 }
 
+@media (max-width:600px) {
+    #main {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        padding: 8vw;
+        font-family: "Roboto", sans-serif;
+        grid-row-gap: 18vw;
 
+    }
+
+    .left {
+
+        width: 100%;
+        height: 100%;
+        /* background-color: blueviolet; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        line-height: 1;
+        gap: 10vw;
+    }
+
+    .left>h1 {
+        font-size: 19.2vw;
+        font-weight: 400;
+        line-height: 18.3vw;
+
+
+    }
+
+    .left_down {
+
+        line-height: 1.5;
+    }
+
+    .left_down>.colors {
+        width: fit-content;
+        border: 1px solid black;
+        border-radius: 50px;
+        display: flex;
+        justify-content: space-between;
+        padding: 5px 10px;
+        margin-top: 50px;
+    }
+
+    .left_down>.colors>p {
+        font-size: 16px;
+        margin-right: 15px;
+    }
+
+    .left_down>.colors>i {
+        font-size: 16px;
+    }
+
+    .left_down>.colors .dots {
+        display: inline;
+        padding: 4px;
+        background-color: black;
+        border-radius: 50%;
+    }
+
+    .left_down>h3 {
+        font-size: 5.5vw;
+       
+        margin-top: 15px;
+        margin-bottom: 0px;
+    }
+
+    .left_down>p {
+        width: 100%;
+        font-size: 3vw;
+        font-weight: 600;
+        padding-bottom: 30px;
+        color: rgb(61, 59, 59);
+
+    }
+
+    .right {
+        
+        height: 100%;
+        width: 100%;
+        /* background-color: green; */
+        position: relative;
+        align-self: end;
+        display: flex;
+        flex-direction: column-reverse;
+        
+    }
+
+    .right .right_top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 60px;
+        padding-right: 20px;
+    }
+
+    .right .right_top>h3 {
+        font-size: 5.1vw;
+
+    }
+
+    .right .right_top>h5 {
+        font-size: 3.4vw;
+    }
+
+    .right .right_top>h5>i {
+        color: gold;
+
+    }
+
+    .right .right_top>h5>i:nth-child(1) {
+        padding-left: 6px;
+    }
+
+    .right .image {
+        width: 100%;
+        height: 90.1%;
+        background-image: url(https://images.unsplash.com/photo-1627067227573-07bc616f46ee?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+        background-size: cover;
+        background-position: 0 40%;
+    }
+
+    .right .black_circle {
+       
+        width: fit-content;
+        background-color: rgb(36, 36, 36);
+        border-radius: 50%;
+        color: white;
+        font-weight: 500;
+        padding: 8vw 2.5vw;
+        position: absolute;
+        top: -4vh;
+        right: -7vw;
+
+    }
+
+    .right .black_circle > h3
+    {
+        font-size: 3vw;
+    }
+    .right .rotted_text {
+        font-size: 7.5vw;
+        font-weight: bolder;
+        position: absolute;
+        left: 0vw;
+        bottom: 0vw;
+        rotate: 0deg;
+        transform-origin: 0 0;
+        top: -10vw;
+        right: 10vw;
+    }
+
+}
